--- a/soccer/src/components/style.css
+++ b/soccer/src/components/style.css
@@ -3,8 +3,16 @@ body {
 }
 
 .title {
-	display: flex;
-	justify-content: center;
+  display: flex;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+.text-div {
+  display: flex;
+  width: 60%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
 }
