--- a/soccer/src/components/style.css
+++ b/soccer/src/components/style.css
@@ -9,6 +9,16 @@ body {
   flex-direction: column;
 }
 
+h1 {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.no-margin {
+  margin-top: 0px;
+  width: 80%;
+}
+
 .text-div {
   display: flex;
   width: 60%;
